yaml/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor-test
  name: nginx-test-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: harbor-test
  sessionAffinity: None
  type: ClusterIP
